--- a/Client/index.html
+++ b/Client/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Preload JS and WASM for Stockfish -->
+    <link rel="preload" href="/stockfish/stockfish.wasm.js" as="script" />
+    <link
+      rel="preload"
+      href="/stockfish/stockfish.wasm"
+      as="fetch"
+      crossorigin
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flowbite React Template Vite</title>
+    <title>Chess-it Fullstack Project</title>
   </head>
   <body>
     <div id="root"></div>
