Update index.html and Features.home.tsx for branding and feature descriptions
- Changed favicon to chess-it logo for improved branding.
- Updated page title to "Chess-it - Interactive Chess Study Platform" for clarity.
- Simplified feature descriptions in Features.home.tsx for better readability.

--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chess-it-logo.svg?v=1" />
 
     <!-- Preload critical font to prevent LCP delay -->
     <link
@@ -14,7 +14,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chess-it Fullstack Project</title>
+    <title>Chess-it - Interactive Chess Study Platform</title>
   </head>
   <body>
     <div id="root"></div>
